--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/Margrett45r/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/duppkxwpwmo/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/cynthiadfb/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/dtdwntttu/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Cranenbut/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/Cleveleyhq/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/Despinadf9/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/cplkkqhiv/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Dukehfc/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/Dixonfht/vdzfzx/raw/master/public/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/Eatonef8/vd5N.8/raw/master/public/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/Dustyyt7/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/Davingm3/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/dvruc1885/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/Darylng7/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/Crystalre6/vdfy/raw/master/public/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/dino5gha/vdwl/raw/master/public/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/Doreatza/vdhG75Ez1eTyeZN/raw/master/public/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/Domenicgt4/vdYongHeng-360p/raw/master/public/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/Domeniccqa/vdLijianhui-200804-720/raw/master/public/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/Dominic17763/vddmt/raw/master/public/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/dtdwntttu/vdszt/raw/master/public/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/Ting.Chua.Gen532/vdUc6y/raw/master/public/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/Dixonweat/vd425/raw/master/public/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/Domeniceg2/vdlin-720p/raw/master/public/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/dsmqilwldbox/vdwnrl/raw/master/public/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/Despinadf4/vdmtdwh/raw/master/public/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/Dinorahfdw/vd9p/raw/master/public/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/Drake6uy/vdzfzx/raw/master/public/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/Donadfilb/vd5-YiSu_MH-360p/raw/master/public/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/Dillonhte/vd5N.8/raw/master/public/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/cubkczcsd/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/Dominivwf6/vd1-Xuezhongmei_MH-360p/raw/master/public/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/Dongyril/vdhuangxiaomin-tuidang/raw/master/public/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/dmvkqktkjfc/vdwm/raw/master/public/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/Dimpleyj8/vdqh/raw/master/public/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/dsviylawdqq/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/Crystalre6/vdfy/raw/master/public/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508691.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2022/01/id13508741-2201122329392124-320x200.jpg"><p align="center">亚城爆满加座 观众：来看神韵 不要怕疫情</p></a>
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508691.md#1" title="亚城爆满加座 观众：来看神韵 不要怕疫情""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/01/id13508741-2201122329392124-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508212.md#1" title="【疫情1.16】上诉失败 德约科维奇离开澳洲""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/01/id13508654-GettyImages-1237761686-320x200.jpg">&nbsp;</a>
@@ -13,10 +13,10 @@
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13507643.md#1" title="官方曝孙力军团伙五“虎”勾连内幕 留疑点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13102419-GettyImages-451962532@1200x1200-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13507477.md#1" title="逾千港人伦敦集会游行 声援香港新闻自由""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/01/id13507506-DSC06022-01-1-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/bpivcn3396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://bpivcn3396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508719.md#1">前中共军队参谋：中共攻台代价巨大 没胜算</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13509069.md#1">北卡购物中心停车场发生枪击案 3人死</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508778.md#1">中医10种好方法可帮助维护记忆力</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508951.md#1">海啸造成严重破坏 汤加通讯仍未完全恢复</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508719.md#1">前中共军队参谋：中共攻台代价巨大 没胜算</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13509069.md#1">北卡购物中心停车场发生枪击案 3人死</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508778.md#1">中医10种好方法可帮助维护记忆力</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508951.md#1">海啸造成严重破坏 汤加通讯仍未完全恢复</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508640.md#1">只能鼓掌不能叫好 北京如临大敌迎冬奥</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/16/n13508703.md#1">蓝营为福岛食品内哄？ 绿委：怎么做尊重他们</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -95,13 +95,13 @@
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/12/n13500059.md#1">【菁英论坛】美国能源危机与高通胀（下集）</a><br>
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/12/n13500077.md#1">洪门宴令市民哗然 寒山碧：香港官员应补课</a><br>
 <a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/12/n13500265.md#1">朝鲜连射导弹 美财政部发布制裁令</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/Columbusr3/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/public/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Dukehfc/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/cqrrqlkbuib/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/Doreathaeg4/vdzfzx/raw/master/public/zfzx.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/Edgardg8/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/Cottonyhrf/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="dfqvhnrpcbw/vdtzrs/blob/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/Conradfjd/vder3n_3VVJ/raw/master/public/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/Conradhm9/vdXmL0_0XDL2p/raw/master/public/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/connieas2m/vdNG8l/raw/master/public/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/conroy6uj/vdwt6Y_vPhM/raw/master/public/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/Classiedfw/vdvG2w_fwq/raw/master/public/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/classie65q/vdO2jN_uD/raw/master/public/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/davis6yh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/Connordgy/vdJZ5e_5Vusp/raw/master/public/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/Conradtfdc/vd0iY/raw/master/public/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/conradti6i/vdmjjy/raw/master/public/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/Connorfb9/vdc4rB_QQbr/raw/master/public/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/Zhai.Qiao.Ling.Shi571175/vdO23c_E/raw/master/public/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://61.227.97.188/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 56,494</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/Columbusr3/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/public/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/dwana46r/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Doylert7/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/Drake6uy/vdzfzx/raw/master/public/zfzx.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/Dimplegn8/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Clementsfgu/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/Corrinne3rg/vdhongchaoyinmou-hi/raw/master/public/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="dfqvhnrpcbw/vdtzrs/blob/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/Conradfjd/vder3n_3VVJ/raw/master/public/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/Conradhm9/vdXmL0_0XDL2p/raw/master/public/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/connieas2m/vdNG8l/raw/master/public/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/conroy6uj/vdwt6Y_vPhM/raw/master/public/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/Classiedfw/vdvG2w_fwq/raw/master/public/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/classie65q/vdO2jN_uD/raw/master/public/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Dierdredb5/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/Connordgy/vdJZ5e_5Vusp/raw/master/public/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/Conradtfdc/vd0iY/raw/master/public/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/conradti6i/vdmjjy/raw/master/public/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/Connorfb9/vdc4rB_QQbr/raw/master/public/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/Zhai.Qiao.Ling.Shi571175/vdO23c_E/raw/master/public/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.233.79.221/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 56,494</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 390,069,359 人
+!共 390,069,427 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13507183.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/01/id13478999-AI-picture-700x420-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13507183.md#1">美CBP用AI安检 两党议员担忧侵犯个人隐私</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506656.md#1">山东老人因强拆上访被拘 自费养老金遭冻结</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506395.md#1">伊宁一岁童随父母隔离每天哭 父母叹无助</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13505548.md#1">张青去世 美国务院吁中共准许郭飞雄赴美</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13505388.md#1">丹麦宣布外交抵制北京冬奥会</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/13/n13503239.md#1">【一线采访】上海多地封控 市民质疑官方数据</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506184.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/12/id13454307-GettyImages-1352761277-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506184.md#1">分析：过度依赖煤炭 中共“双碳”目标难实现</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506545.md#1">中共统计局：去年12月商品房价格环比下跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506117.md#1">私自挪走佳兆业项目预售款 华夏银行被罚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13505751.md#1">大陆74家上市房企2021年市值大缩水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13505456.md#1">OECD：中国房市大幅放缓 将抑制全球增长</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13505158.md#1">中企撒2亿新竹私设研发中心 挖台人才</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/16/n13508451.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/03/c2012c7ff6b2da5db31469d2c1306db5-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/16/n13508451.md#1">朝鲜货车抵中国丹东 传下周两国将开边界</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13507303.md#1">应对中共挑衅 印度向菲律宾出售反舰导弹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13507022.md#1">报导台湾遭中共抗议 印度主播：不听命任何政府</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13507046.md#1">英史学家：疫情冲击远大于预测 台防疫可借鉴</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506359.md#1">2022年“第三虎” 广西副主席刘宏武落马</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506347.md#1">青海公安厅前高官获刑13年 家中藏军用子弹</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506665.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/01/id13490406-GettyImages-1237363688--320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506665.md#1">西安宣传复人气 “马雪娥”客串三角色惹议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506285.md#1">大陆Omicron扩散 上海出现本土感染者</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13505948.md#1">武汉儿童医院医生遭一男子持刀砍伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13504442.md#1">大陆多省疫情持续扩大 天津严控进京通道</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13503614.md#1">应对疫情封锁 天津男囤货堪比超市登上热搜</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13503484.md#1">四川关州水电站透水事故 致9人死亡</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/16/n13508640.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/01/id13508643-GettyImages-1359324202-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/16/n13508640.md#1">只能鼓掌不能叫好 北京如临大敌迎冬奥</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506360.md#1">贵州新郎接亲遇拦门 10余伴郎坐门口剥玉米</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13506213.md#1">大陆老人组群向新人讨红包 不给就骂人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/15/n13505816.md#1">三退声明精选（2022/01/14）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13505376.md#1">万茜吐露产后复出辛酸 叙述平实获赞真实</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/22/1/14/n13504364.md#1">东北女网购金鱼冻成冰坨 解冻后救活一条</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/31/n13472655.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/12/id13472718-bb22bb36f2474e352bb7f8969d6bf2ab-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/31/n13472655.md#1">中国“童话大王”被迫搁笔：维权需335年</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/29/n13467697.md#1">蝉联“劲爆女歌手” 郑欣宜跳唱不慎跌倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/28/n13464863.md#1">中概股“好未来”回原点 创始人落泪致歉</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/23/n13455370.md#1">研究：科兴疫苗加强针防Omicron效果较差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/21/n13449526.md#1">哈佛教授案 利伯未向政府报告中国收入</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/12/18/n13444593.md#1">中国少儿1/4有抑郁倾向 专家提供解方</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/bpivcn3396/djy/blob/master/gb/22/1/13/n13501437.md#1">地方政府披露疫苗接种率 泄国产疫苗真相</a><br>
